Revision history for {{$dist->name}}

{{$NEXT}}

0.003     2017-01-16 01:38:09+08:00 Asia/Kuala_Lumpur
    New features:
    * Ryu::Observable->subscribe callbacks now receive value in $_ as well as @_

    Dependency fixes:
    * Missing deps - Variable::Disposition, etc. - added
    * Moved some unessential modules to recommends/suggests

0.002     2017-01-11 01:01:04+08:00 Asia/Kuala_Lumpur
    No new features.

    Dependency fixes:
    * Removed references to Devel::Peek, Devel::Refcount and Devel::MAT
    left over from earlier testing.

0.001     2017-01-08 19:45:18+08:00 Asia/Kuala_Lumpur
    Initial CPAN release